test/typecheck/fail/issue853_2.sail

type bits('n) = bitvector('n)

val foo : bitvector(32) -> unit

function foo(addr : bits(64)) -> unit = ()
